@@ -22,11 +22,13 @@ BUG FIXES
 
     o	predict.mlm ignored newdata (PR#1226) and also offsets.
 
-    o   demo(tkttest) was inadvertently changed in 1.4.0 so that it would
+    o	demo(tkttest) was inadvertently changed in 1.4.0 so that it would
 	evaluate the requested test, but not display the result.
 
-    o   stars(scale = TRUE) (the default) now works as documented (and
+    o	stars(scale = TRUE) (the default) now works as documented (and
 	as S does).  Previously it only scaled the maximum to 1. (PR#1230)
+
+    o	data.matrix(data.frame(a=0[0])) now works.
 
 
 
